# zerv

./: .gitignore  CMakeLists.txt  Kconfig  README.md
include/zephyr/auxiliary/: aux_time.h  utils.h
include/zephyr/zerv/: zerv.h  zerv_api_impl.h  zerv_cmd.h  zerv_future.h  zerv_internal.h  zerv_msg.h  zerv_pub.h  zerv_topic.h
subsys/: CMakeLists.txt  Kconfig
subsys/pubsub/: CMakeLists.txt  Kconfig  pub.c  sub.c  sub.h  zit_client.h  zit_serv.h  zit_serv_internal.c  zit_serv_internal.h
subsys/pubsub/doc/: zit_serv_future_response_handling.puml  zit_serv_synchronous_request_handling.puml
subsys/zerv/: CMakeLists.txt  Kconfig  pub.c  pub.h  sub.c  sub.h  zerv.conf  zerv_api.h  zerv_internal.c
subsys/zerv/doc/: zerv_future_response_handling.puml  zerv_synchronous_request_handling.puml
tests/subsys/pubsub/: CMakeLists.txt  prj.conf  test_main.c  zit_future_client_service.c  zit_future_client_service.h  zit_test_future_service.c  zit_test_future_service.h  zit_test_service.c  zit_test_service.h  zit_test_service_poll.c  zit_test_service_poll.h
tests/subsys/zerv/: CMakeLists.txt  Makefile  not_implemented.txt  prj.conf  test_main.c  testcase.yaml  zerv_future_client_service.c  zerv_future_client_service.h  zerv_msg_test_service.c  zerv_msg_test_service.h  zerv_test_future_service.c  zerv_test_future_service.h  zerv_test_periodic_thread.c  zerv_test_periodic_thread.h  zerv_test_service.c  zerv_test_service.h  zerv_test_service_poll.c  zerv_test_service_poll.h
zephyr/: module.yml
